# neewer-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  neewer.example.json  neewer_cli.py  neewer_config_cli.py  neewer_config_tui.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: developer-guide.md
docs/wiki/: Configuration.md  Developer-Guide.md  Home.md  Interactive-Config-Editors.md
tests/: test_neewer_cli.py  test_neewer_config_cli.py  test_neewer_config_tui.py
